# air

./: .gitattributes  .gitignore  .nojekyll  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  air.schema.json  air.toml  cli.html  configuration.html  dist-workspace.toml  editor-emacs.html  editor-helix.html  editor-neovim.html  editor-rstudio.html  editor-vscode.html  editor-zed.html  editors-features.html  editors-setup.html  editors.html  formatter.html  index.html  installation.html  integration-github-actions.html  integration-pre-commit.html  integration-uv.html  justfile  pyproject.toml  robots.txt  search.json  sitemap.xml
crates/aether_lsp_utils/: Cargo.toml
crates/aether_lsp_utils/src/: diff.rs  lib.rs  text_edit.rs
crates/aether_lsp_utils/src/proto/: from_proto.rs  to_proto.rs
crates/air/: Cargo.toml
crates/air/fixtures/: needs-formatting-2.R
crates/air/fixtures/crlf/: skip_file.R
crates/air/fixtures/format/: needs-formatting-2.R
crates/air/src/: args.rs  commands.rs  lib.rs  logging.rs  main.rs  status.rs
crates/air/src/commands/: format.rs  generate_completions.rs  generate_shell_completion.rs  language_server.rs  lsp.rs
crates/air/tests/: format-check.rs  format.rs  help.rs
crates/air/tests/integration/: completions.rs  format.rs  generate_shell_completion.rs  help.rs  helpers.rs  main.rs
crates/air/tests/snapshots/: format__check_invalid_output_format.snap  format__check_output_format-2.snap  format__check_output_format-3.snap  format__check_output_format.snap  format__check_when_no_formatting_is_required-2.snap  format__check_when_no_formatting_is_required-3.snap  format__check_when_no_formatting_is_required.snap  help__format_help-2.snap  help__format_help-3.snap  help__format_help.snap  help__help-2.snap  help__help-3.snap  help__help-4.snap  help__help.snap
crates/air/tests/utils/: command.rs  fixtures.rs  mod.rs
crates/air_cli/: Cargo.toml
crates/air_cli/src/: args.rs  commands.rs  lib.rs  main.rs
crates/air_cli/src/commands/: format.rs  lsp.rs
crates/air_cli/tests/: format.rs
crates/air_formatter_test/: Cargo.toml
crates/air_formatter_test/src/: check_reformat.rs  lib.rs  snapshot_builder.rs  spec.rs
crates/air_fs/: Cargo.toml
crates/air_fs/src/: lib.rs
crates/air_r_factory/: Cargo.toml
crates/air_r_factory/src/: lib.rs
crates/air_r_formatter/: Cargo.toml  README.md
crates/air_r_formatter/src/: comments.rs  comments_ext.rs  context.rs  cst.rs  directives.rs  either.rs  formatter.rs  formatter_ext.rs  generated.rs  joiner.rs  joiner_ext.rs  lib.rs  loop_body.rs  options.rs  prelude.rs  separated.rs  statement_body.rs  string_content.rs  string_literal.rs
crates/air_r_formatter/src/options/: magic_line_break.rs
crates/air_r_formatter/tests/: language.rs  quick_test.rs  spec_test.rs  spec_tests.rs
crates/air_r_formatter/tests/crlf/: main.rs  skip_file.rs  string_value.rs
crates/air_r_parser/: Cargo.toml
crates/air_r_parser/src/: error.rs  lib.rs  options.rs  parse.rs  treesitter.rs
crates/air_r_parser/tests/: spec_test.rs  spec_tests.rs
crates/air_r_syntax/: Cargo.toml
crates/air_r_syntax/src/: argument_ext.rs  call_ext.rs  file_source.rs  lib.rs  string_ext.rs  syntax_node.rs
crates/air_workspace/: Cargo.toml
crates/air_workspace/src/: format.rs
crates/biome_r_factory/: Cargo.toml
crates/biome_r_parser/: Cargo.toml
crates/biome_r_parser/src/: lib.rs  parse.rs  treesitter.rs
crates/biome_r_parser/tests/: spec_test.rs
crates/comments/: Cargo.toml
crates/comments/src/: directive.rs  lib.rs
crates/crates/: Cargo.toml  build.rs
crates/crates/src/: lib.rs
crates/crates/src/snapshots/: crates__tests__crate_names.snap
crates/fs/: Cargo.toml
crates/fs/src/: lib.rs
crates/line_ending/: Cargo.toml
crates/line_ending/src/: lib.rs
crates/lsp/: Cargo.toml  build.rs
crates/lsp/src/: capabilities.rs  config.rs  config_vsc.rs  crates.rs  diff.rs  documents.rs  encoding.rs  file_patterns.rs  folding_range.rs  from_proto.rs  handlers.rs  handlers_air.rs  handlers_ext.rs  handlers_format.rs  handlers_state.rs  lib.rs  line_index.rs  logging.rs  main_loop.rs  notifications.rs  proto.rs  settings.rs  settings_vsc.rs  state.rs  test.rs  to_proto.rs  tower_lsp.rs  tower_lsp_test_client.rs  workspaces.rs
crates/lsp/src/notifications/: sync_file_settings.rs
crates/lsp/tests/: format_diff.rs  format_document.rs  initialization.rs  initialize.rs
crates/lsp_test/: Cargo.toml
crates/lsp_test/src/: codec.rs  lib.rs  lsp_client.rs  request.rs
crates/ruff_server/: Cargo.toml
crates/ruff_server/src/: crates.rs  edit.rs  error.rs  format.rs  lib.rs  logging.rs  message.rs  proto.rs  server.rs  session.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: crates.rs  document.rs  edit.rs  lib.rs  logging.rs  message.rs  proto.rs  server.rs  session.rs  test.rs
crates/server/tests/: initialization.rs
crates/server_test/: Cargo.toml
crates/server_test/src/: lib.rs  lsp_client.rs
crates/settings/: Cargo.toml
crates/settings/src/: assignment_style.rs  indent_style.rs  indent_width.rs  lib.rs  line_ending.rs  line_width.rs  magic_line_break.rs  persistent_line_breaks.rs  skip.rs  sorted_names.rs  sorted_strings.rs  table.rs
crates/source_file/: Cargo.toml
crates/source_file/src/: lib.rs  line_index.rs  newlines.rs  source_file.rs  source_location.rs
crates/tests_macros/: Cargo.toml
crates/tests_macros/src/: lib.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: discovery.rs  file_patterns.rs  format.rs  lib.rs  resolve.rs  settings.rs  toml.rs  toml_options.rs
editors/zed/: Cargo.toml  extension.toml
editors/zed/src/: air.rs  lib.rs
xtask/codegen/: Cargo.toml  README.md  r.ungram
xtask/codegen/src/: ast.rs  formatter.rs  generate_macros.rs  generate_node_factory.rs  generate_nodes.rs  generate_nodes_mut.rs  generate_syntax_factory.rs  generate_syntax_kinds.rs  js_kinds_src.rs  kind_src.rs  language_kind.rs  lib.rs  main.rs  r_json_schema.rs  r_kinds_src.rs
xtask/json_schema/: Cargo.toml
xtask/json_schema/src/: main.rs
(+610 files in other folders)
