[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "air"
description = "A formatter for R code"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Posit Software, PBC" }
]
keywords = ["formatter", "parser", "r", "rstats"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.8"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/posit-dev/air"
Repository = "https://github.com/posit-dev/air"
Documentation = "https://github.com/posit-dev/air"
Issues = "https://github.com/posit-dev/air/issues"

[tool.maturin]
manifest-path = "crates/air/Cargo.toml"
bindings = "bin"
strip = true # Strip debug symbols for smaller wheels
