[package]
name = "aether_lsp_utils"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
biome_line_index.workspace = true
biome_text_size.workspace = true
dissimilar.workspace = true
itertools.workspace = true
line_ending.workspace = true
settings.workspace = true
tower-lsp.workspace = true

[lints]
workspace = true
