[package]
name = "air"
version = "0.1.1"
publish = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
air_r_formatter = { workspace = true }
air_r_parser = { workspace = true }
anyhow = { workspace = true }
biome_console = { workspace = true }
biome_diagnostics = { workspace = true }
biome_formatter = { workspace = true }
biome_parser = { workspace = true }
clap = { workspace = true, features = ["wrap_help"] }
fs = { workspace = true }
ignore = { workspace = true }
itertools = { workspace = true }
lsp-server = { workspace = true }
ruff_server = { workspace = true }
source_file = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
workspace = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
