[package]
name = "air"
version = "0.7.0"
publish = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["wrap_help"] }
colored = { workspace = true }
crates = { workspace = true }
fs = { workspace = true }
ignore = { workspace = true }
itertools = { workspace = true }
lsp = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
workspace = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
