[package]
name = "air_r_factory"
version = "0.0.0"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
air_r_syntax = { workspace = true }
biome_rowan  = { workspace = true }

[lints]
workspace = true
