[package]
name = "air_r_factory"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
air_r_syntax = { workspace = true }
biome_rowan = { workspace = true }

[lints]
workspace = true
