
[package]
authors.workspace    = true
categories.workspace = true
description          = "Air R Formatter"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "air_r_formatter"
repository.workspace = true
version              = "0.1.0"

[dependencies]
air_r_syntax    = { workspace = true }
biome_formatter = { workspace = true }
biome_rowan     = { workspace = true }

[lints]
workspace = true
