
[package]
authors.workspace = true
categories.workspace = true
description = "Air R Formatter"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "air_r_formatter"
publish = false
repository.workspace = true
rust-version.workspace = true
version = "0.0.0"

[dependencies]
air_r_syntax = { workspace = true }
biome_formatter = { workspace = true }
biome_rowan = { workspace = true }
itertools = { workspace = true }
settings = { workspace = true, features = ["biome", "serde"] }
tracing = { workspace = true }

[dev-dependencies]
air_formatter_test = { workspace = true }
air_r_parser = { workspace = true }
biome_parser = { workspace = true }
line_ending = { workspace = true }
tests_macros = { workspace = true }

[lints]
workspace = true
