[package]
authors.workspace      = true
categories.workspace   = true
description            = "SyntaxKind and common rowan definitions for air_r_parser"
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
name                   = "air_r_syntax"
publish                = false
repository.workspace   = true
rust-version.workspace = true
version                = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biome_rowan       = { workspace = true, features = ["serde"] }
serde             = { workspace = true, features = ["derive"] }

[lints]
workspace = true
