[package]
name = "biome_r_factory"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
biome_r_syntax    = { workspace = true }
biome_rowan       = { workspace = true }

[lints]
workspace = true
