[package]
name = "comments"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
description = "Utilities for working with comments"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lints]
workspace = true
