[package]
name = "crates"
version = "0.0.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dev-dependencies]
insta.workspace = true

[build-dependencies]
cargo_metadata.workspace = true

[lints]
workspace = true
