[package]
name = "crates"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dev-dependencies]
insta.workspace = true

[build-dependencies]
cargo_metadata.workspace = true

[lints]
workspace = true
