[package]
name = "lsp"
version = "0.0.0"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
air_r_factory.workspace = true
air_r_formatter.workspace = true
air_r_parser.workspace = true
air_r_syntax.workspace = true
anyhow.workspace = true
biome_formatter.workspace = true
biome_lsp_converters.workspace = true
biome_parser.workspace = true
biome_rowan.workspace = true
biome_text_size.workspace = true
crossbeam.workspace = true
dissimilar.workspace = true
futures.workspace = true
itertools.workspace = true
line_ending.workspace = true
memchr.workspace = true
serde.workspace = true
serde_json.workspace = true
struct-field-names-as-array.workspace = true
strum = { workspace = true, features = ["derive"] }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-lsp.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["ansi", "local-time"] }
tree-sitter.workspace = true
tree-sitter-r.workspace = true
triomphe.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
assert_matches.workspace = true
bytes.workspace = true
futures-util.workspace = true
httparse.workspace = true
insta.workspace = true
lsp_test.workspace = true
memchr.workspace = true
tests_macros.workspace = true
tokio-util.workspace = true

[build-dependencies]
cargo_metadata.workspace = true

[lints]
workspace = true
