[package]
name = "lsp_test"
version = "0.0.0"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes.workspace = true
futures.workspace = true
futures-util.workspace = true
httparse.workspace = true
memchr.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tower-lsp.workspace = true
tracing.workspace = true
url.workspace = true

[lints]
workspace = true
