[package]
name = "lsp_test"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
bytes.workspace = true
futures.workspace = true
futures-util.workspace = true
httparse.workspace = true
memchr.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tower-lsp.workspace = true
tracing.workspace = true
url.workspace = true

[lints]
workspace = true
