[package]
name = "source_file"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]

[dependencies]
biome_text_size = { workspace = true }

memchr = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]

[features]
serde = ["dep:serde", "biome_text_size/serde"]

[lints]
workspace = true
