[package]
name = "source_file"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
biome_text_size = { workspace = true }
memchr = { workspace = true }

[lints]
workspace = true
