[package]
authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
name                   = "tests_macros"
publish                = false
repository.workspace   = true
rust-version.workspace = true
version                = "0.0.0"

[lib]
proc-macro = true

[dependencies]
biome_string_case = { workspace = true }
case              = { workspace = true }
globwalk          = { workspace = true }
proc-macro-error  = { workspace = true }
proc-macro2       = { workspace = true }
quote             = { workspace = true }
syn               = { workspace = true }
